// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WidgetTable > displays the title 1`] = `
"<div class="w-full h-full p-6 bg-white rounded-lg shadow-lg">
  <h2 class="text-2xl font-bold mb-4 text-gray-800">Test Table</h2>
  <div class="overflow-x-auto">
    <table class="min-w-full divide-y divide-gray-200">
      <thead class="bg-gray-50">
        <tr>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">metric</th>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">value</th>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">change</th>
        </tr>
      </thead>
      <tbody class="bg-white divide-y divide-gray-200">
        <tr class="hover:bg-gray-50 transition-colors">
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Revenue</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">125,000</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">+15%</td>
        </tr>
        <tr class="hover:bg-gray-50 transition-colors">
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Users</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">5,420</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">+8%</td>
        </tr>
      </tbody>
    </table>
    <!--v-if-->
  </div>
</div>"
`;

exports[`WidgetTable > formats numbers with locale string 1`] = `
"<div class="w-full h-full p-6 bg-white rounded-lg shadow-lg">
  <h2 class="text-2xl font-bold mb-4 text-gray-800">Formatted Table</h2>
  <div class="overflow-x-auto">
    <table class="min-w-full divide-y divide-gray-200">
      <thead class="bg-gray-50">
        <tr>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">metric</th>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">value</th>
        </tr>
      </thead>
      <tbody class="bg-white divide-y divide-gray-200">
        <tr class="hover:bg-gray-50 transition-colors">
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Revenue</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">125,000</td>
        </tr>
        <tr class="hover:bg-gray-50 transition-colors">
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Count</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">5,420</td>
        </tr>
      </tbody>
    </table>
    <!--v-if-->
  </div>
</div>"
`;

exports[`WidgetTable > handles empty data array 1`] = `
"<div class="w-full h-full p-6 bg-white rounded-lg shadow-lg">
  <h2 class="text-2xl font-bold mb-4 text-gray-800">Empty Table</h2>
  <div class="overflow-x-auto">
    <table class="min-w-full divide-y divide-gray-200">
      <thead class="bg-gray-50">
        <tr></tr>
      </thead>
      <tbody class="bg-white divide-y divide-gray-200"></tbody>
    </table>
    <div class="text-center py-8 text-gray-500"> No data available </div>
  </div>
</div>"
`;

exports[`WidgetTable > renders table headers from data keys 1`] = `
"<div class="w-full h-full p-6 bg-white rounded-lg shadow-lg">
  <h2 class="text-2xl font-bold mb-4 text-gray-800">Test Table</h2>
  <div class="overflow-x-auto">
    <table class="min-w-full divide-y divide-gray-200">
      <thead class="bg-gray-50">
        <tr>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">metric</th>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">value</th>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">change</th>
        </tr>
      </thead>
      <tbody class="bg-white divide-y divide-gray-200">
        <tr class="hover:bg-gray-50 transition-colors">
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Revenue</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">125,000</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">+15%</td>
        </tr>
        <tr class="hover:bg-gray-50 transition-colors">
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Users</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">5,420</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">+8%</td>
        </tr>
      </tbody>
    </table>
    <!--v-if-->
  </div>
</div>"
`;

exports[`WidgetTable > renders table rows with data 1`] = `
"<div class="w-full h-full p-6 bg-white rounded-lg shadow-lg">
  <h2 class="text-2xl font-bold mb-4 text-gray-800">Test Table</h2>
  <div class="overflow-x-auto">
    <table class="min-w-full divide-y divide-gray-200">
      <thead class="bg-gray-50">
        <tr>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">metric</th>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">value</th>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">change</th>
        </tr>
      </thead>
      <tbody class="bg-white divide-y divide-gray-200">
        <tr class="hover:bg-gray-50 transition-colors">
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Revenue</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">125,000</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">+15%</td>
        </tr>
        <tr class="hover:bg-gray-50 transition-colors">
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Users</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">5,420</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">+8%</td>
        </tr>
      </tbody>
    </table>
    <!--v-if-->
  </div>
</div>"
`;

exports[`WidgetTable > renders with correct props 1`] = `
"<div class="w-full h-full p-6 bg-white rounded-lg shadow-lg">
  <h2 class="text-2xl font-bold mb-4 text-gray-800">Test Table</h2>
  <div class="overflow-x-auto">
    <table class="min-w-full divide-y divide-gray-200">
      <thead class="bg-gray-50">
        <tr>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">metric</th>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">value</th>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">change</th>
        </tr>
      </thead>
      <tbody class="bg-white divide-y divide-gray-200">
        <tr class="hover:bg-gray-50 transition-colors">
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Revenue</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">125,000</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">+15%</td>
        </tr>
        <tr class="hover:bg-gray-50 transition-colors">
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Users</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">5,420</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">+8%</td>
        </tr>
      </tbody>
    </table>
    <!--v-if-->
  </div>
</div>"
`;

exports[`WidgetTable > updates table when data prop changes 1`] = `
"<div class="w-full h-full p-6 bg-white rounded-lg shadow-lg">
  <h2 class="text-2xl font-bold mb-4 text-gray-800">Updated Table</h2>
  <div class="overflow-x-auto">
    <table class="min-w-full divide-y divide-gray-200">
      <thead class="bg-gray-50">
        <tr>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">metric</th>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">value</th>
          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">change</th>
        </tr>
      </thead>
      <tbody class="bg-white divide-y divide-gray-200">
        <tr class="hover:bg-gray-50 transition-colors">
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Sales</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">50,000</td>
          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">+20%</td>
        </tr>
      </tbody>
    </table>
    <!--v-if-->
  </div>
</div>"
`;
